# Littoral_S2download

./: .gitignore  GEOJSON_INFRASTRUCTURE.md  LICENSE  MOUNT_UTILS.md  PIPELINE_README.md  README.md  alpha_earth.ipynb  big_query_interface.ipynb  ee_s2.py  ee_s2_download.py  environment.yml  intersection testing.ipynb  littoral_ne_sites .csv  littoral_ne_sites.csv  littoral_pipeline.ipynb  littoral_pipeline.py  littoral_sites.csv  littoral_sites.py  mount_verification.py  pipeline_advanced.py  pipeline_config.yaml  pipeline_functions.py  pipeline_orchestrator.py  pipeline_testing_notebook.ipynb  pyproject.toml  requirements.txt  tario.py  temp_transfer_file.py  test_cloud_geojson.py  test_geojson_conversion.py  test_geojson_step.py  test_simple_geojson.py  testable_geojson.py
.ipynb_checkpoints/: ee_s2-checkpoint.py  environment-checkpoint.yml  littoral_sites-checkpoint.csv  littoral_sites-checkpoint.py
alpha-earth/: alpha_earth.ipynb  llm-alpha-earth.ipynb
cloud_services/: Dockerfile  app.yaml  metadata_api.py  requirements.txt
pipeline/: __init__.py  image_export.ipynb  mount_utils.py  pipeline_advanced.py  pipeline_config.py  pipeline_functions.py  pipeline_orchestrator.py
src/littoral/: __init__.py  ee_s2.py  geo_transform.py  littoral_sites.py  littoral_tide_correction.py  similarity.ipynb
test_framework/: IMPLEMENTATION_SUMMARY.md  README.md  run_example.py  test_runner.py  visualize_results.py
test_framework/config/: 3-sites.yaml  partial_pipeline_test.yaml  (+3 more)
tests/: __init__.py  run_tests.py  test_imports.py  test_mounting.py  test_pipeline.py
(+14 files in other folders)
